# nix-docker-example

./: LICENSE  default.nix  docker.nix  nix-docker-example.cabal  shell.nix  stack.yaml
