name:                nix-docker-example
version:             0.1.0.0
synopsis:            Nix+Docker Example
description:         Use Nix to package a Scotty web application in a docker image.
category:            none
license:             BSD3
license-file:        LICENSE
author:              lbodor
maintainer:          lazar.bodor@gmail.com
copyright:           Lazar Bodor 2016
build-type:          Simple
cabal-version:       >=1.10

executable nix-docker-example
  main-is:             Main.hs
  hs-source-dirs:      src
  other-extensions:    OverloadedStrings

  build-depends:       base >= 4.8 && < 4.9,
                       scotty >= 0.11 && < 0.12

  default-language:    Haskell2010
